--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 body{
-  font-family: Arial, sans-serif;
+  font-family: "Papyrus", "Herculanum", "Party LET", fantasy;
   color: #333;
   background-color: #f9f9f9;
   margin: 0;
   padding: 0;
   line-height: 1.6;
+  text-align: center;
 }
 header{
   background-color: #4CAF50;
