Simplify font-family declaration in styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-  font-family: "Papyrus", "Herculanum", "Party LET", fantasy;
+  font-family: "Papyrus", fantasy;
   color: #333;
   background-color: #f9f9f9;
   margin: 0;
