--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 body{
-  font-family: "Papyrus", fantasy;
+  font-family: Arial, sans-serif;
   color: #333;
   background-color: #f9f9f9;
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  text-align: center;
 }
 header{
   background-color: #4CAF50;
