--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
   line-height: 1.6;
 }
 header{
-  background-color: #4CAF50;
+  background-color: #F54927;
   color: white;
   padding: 20px;  
   text-align: center;
@@ -26,7 +26,7 @@ nav a:hover{
 main{ 
   padding: 20px;  
   max-width: 800px;
-  margin: 0 auto;
+  margin: 2 auto;
 }
 main img {
   max-width: 100%;
