--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ nav a:hover{
 main{ 
   padding: 20px;  
   max-width: 800px;
-  margin: 2 auto;
+  margin: 0 auto;
 }
 main img {
   max-width: 100%;
@@ -53,6 +53,7 @@ a{
 }
 a:hover{
   text decoration: underline;
+}
 img{
   border: 5px solid #4CAF50;
   border-radius: 10px;
